--- a/fydp-console-sw.vcxproj
+++ b/fydp-console-sw.vcxproj
@@ -87,6 +87,13 @@
   <ItemGroup>
     <ClCompile Include="main.c" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="common.h" />
+    <ClInclude Include="main_algorithm.h" />
+    <ClInclude Include="mic_input.h" />
+    <ClInclude Include="mode_of_operation.h" />
+    <ClInclude Include="transducer_output.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
