--- a/fydp-console-sw.vcxproj
+++ b/fydp-console-sw.vcxproj
@@ -89,6 +89,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.h" />
+    <ClInclude Include="dsplib674x.h" />
     <ClInclude Include="mic_input.h" />
     <ClInclude Include="mode_of_operation.h" />
     <ClInclude Include="transducer_output.h" />
