--- a/fydp-console-sw.vcxproj
+++ b/fydp-console-sw.vcxproj
@@ -91,6 +91,7 @@
     <ClInclude Include="common.h" />
     <ClInclude Include="dsplib674x.h" />
     <ClInclude Include="fft_wrap.h" />
+    <ClInclude Include="matlab_helper.h" />
     <ClInclude Include="mic_input.h" />
     <ClInclude Include="mock.h" />
     <ClInclude Include="mode_of_operation.h" />
