--- a/fydp-console-sw.vcxproj.filters
+++ b/fydp-console-sw.vcxproj.filters
@@ -59,5 +59,8 @@
     <ClInclude Include="antivoice\antivoice.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="antivoice\feedback_calibration.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
